# aws-tenant-management-saas-demo

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: linters.yml
tenant_management_integrations/: shared.py  tm_sdk.py  utilities.py
tenant_management_integrations/examples/tm_integration/handlers/: tm_integration_handler.py
tenant_management_integrations/examples/tm_integration/logic/: handle_tenant_mgmt_events.py
tenant_management_integrations/examples/tm_integration/logic/event_handlers/: activate_handler.py  create_handler.py  delete_handler.py  update_handler.py
tenant_management_integrations/examples/tm_integration_lambda_handler/handlers/: tm_integration_handler.py
tenant_management_integrations/examples/tm_integration_lambda_handler/handlers/schemas/: request_types.py
tenant_management_integrations/examples/tm_integration_lambda_handler/logic/: handle_tenant_mgmt_events.py
tenant_management_integrations/examples/tm_integration_lambda_handler/logic/event_handlers/: suspend_handler.py
tenant_management_integrations/schemas/: common.py  sns.py  sqs.py
